assets/css/style.css
/*---------------------------------------Font Links*/
@import url('https://fonts.googleapis.com/css?family=Tangerine:400,700&display=swap');
@import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,2000,300,400,500,600,700&display=swap');
@import url('https://fonts.googleapis.com/css?family=Amiri:400,700&display=swap');
/*font-family: 'Amiri', serif;

/*
@import url('https://fonts.googleapis.com/css?family=Fredericka+the+Great&display=swap');
font-family: 'Fredericka the Great', cursive;
*/


body {
    font-family: "Roboto", sans-serif;
    font-size: 1.2rem;
    background-color: rgb(243, 223, 172);
}

 

/*---------------------------------------Colours*/

nav {
    display: table;
    background-color: rgb(24, 48, 22);
}

.navbar-dark .navbar-brand {
    color: rgb(255, 242, 210);
}


.navbar {
    margin-bottom: 0;
    border: 0;
    width: 100%;
    background-color: rgb(24, 48, 22);
}

.navbar-brand .logo-image {
    height: 60px;
    width: 60px;
    
}

.navbar-dark .navbar-nav .nav-link {
    color: #f1d578e8;
}

.navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
    color: rgb(255, 242, 210,.75);
}

.brand-name {
    vertical-align: middle;
    margin-top: 20px;
    margin-bottom: 20px;
    margin-right: 0px;
    margin-left: 7px;
    font-family: 'Tangerine', cursive;
    font-size: 37px;
    padding: 0;
    line-height: 30px;
    letter-spacing: 0px;
    font-weight: 700;
    text-shadow: 1px 1px 3px black;
}

.brand-name .sm-brand-name {
    font-size: 32px;
    text-shadow: 1px 1px 3px black;
}

.navbar .navbar-toggler {
    color: #f1d578e8;
    border-radius: 0.1rem;
    text-shadow: 1px 1px 2px rgb(20, 43, 18);
}

.navbar-nav .nav-item {
    padding-left: 15px;
    padding-right: 15px;
    cursor: pointer;
    text-shadow: 1px 1px 2px rgb(20, 43, 18);
}

#navbarNavDropdown{
    background-color: rgb(24, 48, 22);
    z-index: 4;
}

.dropdown-menu {
   background-color: rgb(24, 48, 22);
   border: none;
}

.dropdown-item {
    color: #f1d578e8;
}

.dropdown-item:focus, .dropdown-item:hover {
    color: rgb(255, 242, 210);
    text-decoration: none;
    background-color: rgb(24, 48, 22);
}

.navbar-dark .navbar-nav .active>.nav-link, .navbar-dark .navbar-nav .nav-link.active, .navbar-dark .navbar-nav .nav-link.show, .navbar-dark .navbar-nav .show>.nav-link {
    color: rgb(255, 242, 210);
    text-shadow: 1px 1px 2px rgb(20, 43, 18);
}

/*---------------------------------------Headings*/



.logo {
    background: url(".../images/NN-Version-2---rbg243-223-172");
}


nav button {
  background-color: #4CAF50; /* Green */
  border: none;
  color: rgb(243, 223, 172);
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
}



/*---------------------------------------Parallax*/
.parallax-container {
    padding: 0px;
}
.parallax {
    width: 100%;
    margin: 0;
    padding: 0;
    min-height: 500px;
    background: transparent;
}

.info {
    min-height: 500px;
    z-index: 2;
    background-color: rgba(0,0,0,0.25);
    position: relative;
}

.info2 {
    min-height: 500px;
    z-index: 2;
    background-color: rgba(0,0,0,0.15);
    position: relative;
}

.jumbotron {
    background-color: transparent;
    color: rgb(255, 242, 210);
    font-weight: 300;
    text-shadow: 2px 2px 5px black; 
    margin-bottom: 0px;
}
 
h1{
    font-weight: 400;
    line-height: 1.5em;
    padding-right: 10px;
}

.features i{
    font-size: 45px;
    margin-top: 40px;
    margin-bottom: 10px;
    line-height: 45px;
    text-align: center;
    color: rgb(129, 77, 28);
    /*color: rgb(24, 48, 22);*/
}

.feature-first-row {
    background-color: rgb(255, 242, 210);
    padding-top: 20px;
}

.feature-section {
    width: 80%;
    background-color: rgb(255, 242, 210);
    }

@media (min-width: 992px) {
.feature-section{
    max-width: 50%;
}
}


.feature-section h2{
    color: rgb(80, 42, 7);
    font-family: 'Tangerine', cursive;
    font-size: 45px;
    letter-spacing: 2px;
    font-weight: 700;
    text-align: center;
    margin-bottom: 20px;
    margin-top: 30px;
}

.feature-section p{
    color: rgb(80, 42, 7);
    font-size: 1.0rem;
    font-weight: 500;
}

.feature-title{
    font-family: 'Tangerine', cursive;
    color: rgb(80, 42, 7);
    font-size: 40px;
    letter-spacing: 0px;
    font-weight: bolder;
    padding-bottom: 0px;
    margin-bottom: 10px;
    text-align: center;
}

.feature-list{
    font-weight: 400;
    margin-left: 40px;
    color: rgb(80, 42, 7);
    padding-bottom: 5px;

}

.feature-list li{
    margin-bottom: 10px;
    margin-right: 30px;
}

@media (min-width: 768px) {
.feature-list{
    margin-left: 60px;
}
}

@media (min-width: 992px) {
.feature-list{
    margin-left: 80px;
}
}


.features .read-more-btn{
    text-align: center;
}

.btn-light {
    color: rgb(255, 242, 210);
    background-color: rgb(129, 77, 28, 0.6);
    border: none;
    margin-bottom: 20px;
    
}
.btn-light:hover {
    color: rgb(129, 77, 28, 0.6);
    background-color: rgb(129, 77, 28, 0.2);
    border-color: rgb(129, 77, 28, 0.6);
}


.info
p {
    font-weight: 400;
    margin-top: 1rem;
    font-size: 20px;
    letter-spacing: 1px;
}

.btn--jum {
    text-shadow: 1px 1px 1px rgb(24, 48, 22); 
    background: linear-gradient(#3b8628, #193b0c);
    background-color: #377a1a;
    box-shadow: inset 0 1px 1px #7ebb64;
    border-color: #2b4e1a #274916 #112405;
}

.paper {
    background-color: rgb(243, 223, 172);
}

.feature-section-hr {
    text-align: center;
    width: 50%;
    height: 1px;
    background-color: rgba(46, 95, 42, 0.808);
    margin-bottom: 30px;
    padding-top: 0px;
    border-top: 1px;
}

.feature-section-p{
    margin-bottom: 30px;
}
/* ... */

